%% Status: FROZEN
%% Last aligned with code: 2026-02-08
stateDiagram-v2
  [*] --> ai_on

  ai_on --> ai_paused_by_human: manual_pause_in_ui
  ai_on --> ai_paused_by_human: outbound_sent_via_frostdesk

  ai_paused_by_human --> ai_on: manual_reactivate_in_ui

  ai_on --> ai_suggestion_only: ambiguity_or_risk_detected
  ai_suggestion_only --> ai_on: instructor_confirms_and_sends

  note right of ai_on
    Drafts replies
    Drafts booking proposals
    Never sends messages
  end note

  note right of ai_paused_by_human
    Explicit human control
    AI reads but does not suggest
  end note

  note right of ai_suggestion_only
    High ambiguity context
    Suggestions only
  end note
